[package]
name = "rsmime"
version = "0.4.2"
edition = "2021"

[lib]
name = "rsmime"
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.20", features = ["extension-module"] }


[features]
abi3 = ["pyo3/abi3-py37", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]
