[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rsmime"
version = "0.4.2"
description = "Rust powered package for signing data in S/MIME format"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]