[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rsmime"
version = "0.7.0"
description = "Python package for signing and verifying S/MIME messages"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[project.optional-dependencies]
dev = [
    "callee==0.3.1",
    "maturin==1.3.1",
    "mike==1.1.2",
    "mkdocs-autorefs==0.5.0",
    "mkdocs-material==9.4.7",
    "mkdocstrings[python]==0.23.0",
    "pytest==7.4.3",
    "ruff==0.1.3",
]

[tool.maturin]
python-source = "python"
include = [
  { path = "**/*.pyi", format = ["sdist", "wheel"] },
]

[tool.ruff.format]
quote-style = "single"
